Last step layout in figma

--- a/src/html/partials/head.html
+++ b/src/html/partials/head.html
@@ -8,5 +8,6 @@
    <link rel="stylesheet" href="css/main.min.css">
    <link rel="stylesheet" href="css/vendor/normalize.min.css">
    <script src="js/main.js"></script>
+   <script src="js/before-after.js"></script>
 </head>
  
