--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,8 @@
 @import "./components/main";
 @import "./components/button";
 @import "./components/catalog";
+@import "./components/work";
+@import "./components/example";
+@import "./components/maps";
+@import "./components/footer";
+@import "./components/befoter";
